Removed chatlog spamming when colony placement failed